@@ -1,3 +1,9 @@
+2001-06-02  Dave Peticolas  <dave@krondo.com>
+
+	* src/SplitLedger.c: fix mem leak
+
+	* src/gnome/top-level.c: handle X errors ourselves
+
 2001-06-01  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnc-ui-util.c: use new scanf macro below
